--- a/app/src/main/res/layout/activity_dongtai_detail.xml
+++ b/app/src/main/res/layout/activity_dongtai_detail.xml
@@ -20,37 +20,55 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/common_title_height"
             android:background="@android:color/background_light"
-            android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
+            android:gravity="center_vertical"
+            app:titleText="@string/detail_title"></com.minyou.manba.ui.ActionTitleView>
 
+        <com.minyou.manba.ui.view.HeadZoomScrollView
+            android:id="@+id/scrollview_detail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/atv_title"
+            android:layout_marginBottom="50dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginBottom="50dp"
-                android:layout_below="@id/atv_title">
+                android:orientation="vertical">
 
-                <in.srain.cube.views.ptr.PtrClassicFrameLayout
-                    android:id="@+id/pcfl_refresh_comment"
+                <ImageView
+                    android:id="@+id/iv_bg_head"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recycler_comment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
-                </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+                <include
+                    android:id="@+id/include_dongtai_detail"
+                    layout="@layout/item_activity_dongtai_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!--<in.srain.cube.views.ptr.PtrClassicFrameLayout-->
+                <!--android:id="@+id/pcfl_refresh_comment"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
+                <!--</in.srain.cube.views.ptr.PtrClassicFrameLayout>-->
 
                 <TextView
                     android:id="@+id/tv_empty"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/common_to_side"
-                    android:visibility="gone"
-                    android:text="@string/comment_empty"/>
+                    android:text="@string/comment_empty"
+                    android:visibility="gone" />
 
             </LinearLayout>
+        </com.minyou.manba.ui.view.HeadZoomScrollView>
 
         <RelativeLayout
             android:id="@+id/rl_menu"
@@ -66,22 +84,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/common_to_side"
                 android:button="@null"
+                android:checked="@{ZoneDetailBean.favorite ? true : false}"
                 android:drawableLeft="@drawable/details_icon_shouchang"
                 android:drawablePadding="@dimen/common_text_side"
-                android:checked="@{ZoneDetailBean.favorite ? true : false}"
                 android:text="@{String.valueOf(ZoneDetailBean.favoriteNum)}" />
 
             <CheckBox
                 android:id="@+id/tv_zan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
                 android:button="@null"
+                android:checked="@{ZoneDetailBean.upvote ? true : false}"
                 android:drawableLeft="@drawable/select_detail_zan"
                 android:drawablePadding="@dimen/common_text_side"
-                android:checked="@{ZoneDetailBean.upvote ? true : false}"
-                android:text="@{String.valueOf(ZoneDetailBean.upvoteNum)}"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:text="@{String.valueOf(ZoneDetailBean.upvoteNum)}" />
 
             <TextView
                 android:id="@+id/tv_comment"
@@ -99,32 +117,33 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
+            android:background="@android:color/background_light"
             android:orientation="horizontal"
-            android:visibility="gone"
-            android:background="@android:color/background_light">
+            android:visibility="gone">
 
 
             <EditText
                 android:id="@+id/et_comment_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="bottom"
                 android:layout_marginLeft="@dimen/common_to_side"
                 android:layout_weight="1"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:gravity="bottom"
+                android:textSize="@dimen/large_textsize"
                 android:hint="@string/detail_send_hint" />
 
             <TextView
                 android:id="@+id/tv_send"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginLeft="@dimen/common_to_side"
                 android:background="@drawable/select_common_bg"
+                android:gravity="center"
                 android:text="@string/detail_send"
-                android:textColor="@android:color/background_light"/>
+                android:textColor="@android:color/background_light" />
 
         </LinearLayout>
 
