--- a/app/src/main/res/layout/item_activity_dongtai_detail.xml
+++ b/app/src/main/res/layout/item_activity_dongtai_detail.xml
@@ -92,6 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:background="@drawable/shape_borderline_grey_guanzhu"
                 android:drawableLeft="@drawable/home_icon_guanzhu"
                 android:drawablePadding="@dimen/common_text_side"
@@ -154,14 +155,65 @@
             android:layout_height="@dimen/common_to_side"
             android:background="@color/aliceblue" />
 
-        <TextView
-            android:id="@+id/all_reply_num_tv"
+        <RadioGroup
+            android:id="@+id/rg_comment_group"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/common_to_top"
+            android:background="@android:color/background_light"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_comment_normal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="@dimen/common_text_side"
+                android:text="@string/comment_sort_normal"
+                android:textColor="@color/bottom_text_color" />
+
+            <RadioButton
+                android:id="@+id/rb_comment_hot"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="@dimen/common_text_side"
+                android:text="@string/comment_sort_hot"
+                android:textColor="@color/bottom_text_color" />
+        </RadioGroup>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:padding="@dimen/common_to_side"
-            android:text="@string/comment_number"
-            android:textSize="16dp" />
+            android:layout_marginTop="@dimen/common_to_side"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/all_reply_num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:padding="@dimen/common_to_side"
+                android:text="@string/comment_number"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/tv_sort_type"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/common_to_side"
+                android:drawablePadding="@dimen/common_text_side"
+                android:drawableRight="@drawable/gategory_below"
+                android:gravity="end"
+                android:text="@string/comment_sort_zheng"/>
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
