--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_dark">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_image"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"></android.support.v4.view.ViewPager>
+        android:background="@android:color/background_dark">
 
-    <TextView
-        android:id="@+id/tv_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="1/9"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/common_textsize" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"></android.support.v4.view.ViewPager>
 
-    <ImageView
-        android:id="@+id/image_menu"
-        android:layout_width="@dimen/image_menu_icon_height"
-        android:layout_height="@dimen/image_menu_icon_height"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/common_to_side"
-        android:src="@drawable/details_icon_more" />
+        <TextView
+            android:id="@+id/tv_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="1/9"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/common_textsize" />
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/image_menu"
+            android:layout_width="@dimen/image_menu_icon_height"
+            android:layout_height="@dimen/image_menu_icon_height"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/common_to_side"
+            android:src="@drawable/details_icon_more" />
+
+    </RelativeLayout>
+</layout>
