--- a/app/src/main/res/layout/item_gallery_layout.xml
+++ b/app/src/main/res/layout/item_gallery_layout.xml
@@ -3,14 +3,14 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
             android:scaleType="centerCrop" />
     </LinearLayout>
 </layout>
