--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -1,60 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <com.minyou.manba.ui.ActionTitleView
-        android:id="@+id/atv_title"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/common_title_height"></com.minyou.manba.ui.ActionTitleView>
-
-    <EditText
-        android:id="@+id/login_number"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/login_num_side"
-        android:layout_marginRight="@dimen/login_num_side"
-        android:layout_marginTop="@dimen/common_to_top"
-        android:hint="@string/login_num"
-        android:inputType="phone" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginTop="@dimen/common_to_top"
-        android:layout_marginLeft="@dimen/display_password"
-        android:layout_marginRight="@dimen/regist_padding_to_side"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@android:color/background_light"
+        android:orientation="vertical">
+
+        <com.minyou.manba.ui.ActionTitleView
+            android:id="@+id/atv_title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/common_title_height"
+            app:titleText="@string/regist_binding_phone"></com.minyou.manba.ui.ActionTitleView>
+
         <EditText
-            android:id="@+id/et_sms"
+            android:id="@+id/login_number"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/common_edit_height"
+            android:layout_marginLeft="@dimen/login_num_side"
+            android:layout_marginRight="@dimen/login_num_side"
+            android:layout_marginTop="@dimen/common_to_top"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:background="@drawable/et_line_bg_style"
+            android:textCursorDrawable="@drawable/et_cursor_color_drawable"
+            android:textSize="@dimen/common_textsize"
+            android:hint="@string/login_num"
+            android:inputType="phone" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/display_password"
+            android:layout_marginRight="@dimen/regist_padding_to_side"
+            android:layout_marginTop="@dimen/common_to_top"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            android:layout_weight="1"
-            android:hint="@string/regist_yanzhengma" />
+            <EditText
+                android:id="@+id/et_sms"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/common_edit_height"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:background="@drawable/et_line_bg_style"
+                android:hint="@string/regist_yanzhengma"
+                android:textCursorDrawable="@drawable/et_cursor_color_drawable"
+                android:textSize="@dimen/common_textsize" />
+
+            <TextView
+                android:id="@+id/tv_send_sms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_borderline_bluefull"
+                android:gravity="center"
+                android:text="@string/regist_getyanzhengma"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/tv_send_sms"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_regist"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginLeft="@dimen/display_password"
+            android:layout_marginRight="@dimen/display_password"
+            android:layout_marginTop="50dp"
             android:background="@drawable/shape_borderline_bluefull"
-            android:textColor="@android:color/white"
-            android:text="@string/regist_getyanzhengma"/>
+            android:gravity="center"
+            android:text="@string/regist_finish_third"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_regist"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/display_password"
-        android:layout_marginRight="@dimen/display_password"
-        android:background="@drawable/shape_borderline_bluefull"
-        android:gravity="center"
-        android:layout_marginTop="50dp"
-        android:textColor="@android:color/white"
-        android:text="@string/regist_finish_third" />
-
-</LinearLayout>
+</layout>
