--- a/app/src/main/res/layout/activity_gallery_layout.xml
+++ b/app/src/main/res/layout/activity_gallery_layout.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/background_light"
         android:orientation="vertical">
+
+        <com.minyou.manba.ui.ActionTitleView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/common_title_height"
+            android:gravity="center_vertical"
+            app:titleText="@string/person_gallery"></com.minyou.manba.ui.ActionTitleView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/gallery_recycler_view"
