--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,196 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/login_icon_top"
-            android:src="@drawable/ic_launcher" />
-
-        <!--<com.minyou.manba.ui.view.RoundImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--app:circle="true"-->
-            <!--app:border_width="10dp"-->
-            <!--android:src="@drawable/ic_launcher" />-->
-
-        <EditText
-            android:id="@+id/login_number"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/login_num_side"
-            android:layout_marginRight="@dimen/login_num_side"
-            android:layout_marginTop="@dimen/login_icon_top"
-            android:hint="@string/login_num"
-            android:inputType="phone" />
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_to_top"
-            android:gravity="center_vertical">
-
-            <EditText
-                android:id="@+id/login_pwd"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/login_num_side"
-                android:layout_marginRight="@dimen/login_num_side"
-                android:hint="@string/login_pwd"
-                android:inputType="textPassword" />
-
-            <CheckBox
-                android:id="@+id/cb_display_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/display_password"
-                android:button="@drawable/login_icon_checked"
-                android:checked="false" />
-
-        </RelativeLayout>
-
-
-        <Button
-            android:id="@+id/bt_login"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/shape_borderline_bluefull"
-            android:text="@string/login"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/common_textsize" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/ll_other_login"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="fill_parent"
+        android:background="@android:color/background_light">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="1dp"
-                android:layout_marginLeft="50dp"
-                android:layout_weight="1"
-                android:background="@android:color/black" />
-
-            <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/login_icon_top"
+                android:src="@drawable/ic_launcher" />
+
+            <EditText
+                android:id="@+id/login_number"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/common_edit_height"
+                android:layout_marginLeft="@dimen/login_num_side"
+                android:layout_marginRight="@dimen/login_num_side"
+                android:layout_marginTop="@dimen/login_icon_top"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:background="@drawable/et_line_bg_style"
+                android:textCursorDrawable="@drawable/et_cursor_color_drawable"
+                android:textSize="@dimen/common_textsize"
+                android:hint="@string/login_num"
+                android:inputType="phone" />
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_to_top"
+                android:gravity="center_vertical">
+
+                <EditText
+                    android:id="@+id/login_pwd"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/common_edit_height"
+                    android:layout_marginLeft="@dimen/login_num_side"
+                    android:layout_marginRight="@dimen/login_num_side"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:background="@drawable/et_line_bg_style"
+                    android:textCursorDrawable="@drawable/et_cursor_color_drawable"
+                    android:textSize="@dimen/common_textsize"
+                    android:hint="@string/login_pwd"
+                    android:inputType="textPassword" />
+
+                <CheckBox
+                    android:id="@+id/cb_display_pwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/display_password"
+                    android:clickable="true"
+                    android:button="@drawable/login_icon_checked"
+                    android:checked="false" />
+
+            </RelativeLayout>
+
+
+            <Button
+                android:id="@+id/bt_login"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:text="@string/login_thrid" />
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="1dp"
-                android:layout_marginRight="50dp"
-                android:layout_weight="1"
-                android:background="@android:color/black" />
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:background="@drawable/shape_borderline_bluefull"
+                android:text="@string/login"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/common_textsize" />
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/ll_other_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="@dimen/login_num_side"
+            android:layout_alignParentBottom="true"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="@string/login_thrid" />
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="1dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/black" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="@dimen/login_num_side"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_weixin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/login_num_side"
+                    android:drawableTop="@drawable/login_icon_weixin"
+                    android:gravity="center"
+                    android:text="@string/login_weixin" />
+
+                <TextView
+                    android:id="@+id/tv_qq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="@dimen/login_num_side"
+                    android:drawableTop="@drawable/login_icon_qq"
+                    android:gravity="center"
+                    android:text="@string/login_qq" />
+
+                <TextView
+                    android:id="@+id/tv_sina"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/login_num_side"
+                    android:drawableTop="@drawable/login_icon_xinlang"
+                    android:gravity="center"
+                    android:text="@string/login_xinlang"
+                    android:visibility="gone" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/ll_other_login"
+            android:layout_marginBottom="10dp">
+
+
+            <ImageView
+                android:id="@+id/iv_line"
+                android:layout_width="1dp"
+                android:layout_height="16dp"
+                android:layout_centerInParent="true"
+                android:background="@android:color/darker_gray" />
 
             <TextView
-                android:id="@+id/tv_weixin"
+                android:id="@+id/tv_forget_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/login_num_side"
-                android:drawableTop="@drawable/login_icon_weixin"
-                android:gravity="center"
-                android:text="@string/login_weixin" />
+                android:layout_toLeftOf="@id/iv_line"
+                android:text="@string/login_forget_pwd"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="@dimen/common_textsize" />
 
             <TextView
-                android:id="@+id/tv_qq"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="@dimen/login_num_side"
-                android:drawableTop="@drawable/login_icon_qq"
-                android:gravity="center"
-                android:text="@string/login_qq" />
-
-            <TextView
-                android:id="@+id/tv_sina"
+                android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/login_num_side"
-                android:drawableTop="@drawable/login_icon_xinlang"
-                android:gravity="center"
-                android:text="@string/login_xinlang"
-                android:visibility="gone" />
+                android:text="@string/regist_now"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="@dimen/common_textsize"
+                android:layout_alignTop="@+id/iv_line"
+                android:layout_toEndOf="@+id/iv_line"
+                android:layout_marginStart="10dp" />
+        </RelativeLayout>
 
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/ll_other_login"
-        android:layout_marginBottom="10dp">
-
-
-        <ImageView
-            android:id="@+id/iv_line"
-            android:layout_width="1dp"
-            android:layout_height="16dp"
-            android:layout_centerInParent="true"
-            android:background="@android:color/darker_gray" />
-
-        <TextView
-            android:id="@+id/tv_forget_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/login_num_side"
-            android:layout_toLeftOf="@id/iv_line"
-            android:text="@string/login_forget_pwd"
-            android:textSize="@dimen/common_textsize"
-            android:textColor="@android:color/darker_gray"/>
-
-        <TextView
-            android:id="@+id/tv_sign_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/login_num_side"
-            android:layout_toRightOf="@id/iv_line"
-            android:text="@string/regist_now"
-            android:textSize="@dimen/common_textsize"
-            android:textColor="@android:color/darker_gray"/>
     </RelativeLayout>
-
-</RelativeLayout>
+</layout>
