--- a/app/src/main/res/drawable/shape_borderline_bluefull.xml
+++ b/app/src/main/res/drawable/shape_borderline_bluefull.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- 背景颜色 -->
-    <solid android:color="#2894FF" />
+    <solid android:color="@color/colorCommon" />
 
     <!-- 设置边框 -->
     <padding
