--- a/app/src/main/res/layout/activity_sociation_detail.xml
+++ b/app/src/main/res/layout/activity_sociation_detail.xml
@@ -20,9 +20,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/common_to_side"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_marginRight="@dimen/common_to_side"
+            android:layout_margin="@dimen/common_to_side"
             android:background="@drawable/shape_borderline_bluefull"
             android:gravity="center"
             android:text="@string/gonghui_shenqingjiaru"
