--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,6 +26,7 @@
     <declare-styleable name="ActionTitle">
         <attr name="titleText" format="string"></attr>
         <attr name="borderLine" format="boolean"></attr>
+        <attr name="backIcon" format="boolean"></attr>
     </declare-styleable>
 
 
