--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -12,19 +12,27 @@
             android:layout_height="match_parent"
             android:layout_centerInParent="true"></android.support.v4.view.ViewPager>
 
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="@dimen/login_num_side"
+            android:src="@drawable/navi_bar_back_img" />
+
         <TextView
             android:id="@+id/tv_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:text="1/9"
             android:textColor="@android:color/white"
             android:textSize="@dimen/common_textsize" />
 
         <ImageView
             android:id="@+id/image_menu"
-            android:layout_width="@dimen/image_menu_icon_height"
-            android:layout_height="@dimen/image_menu_icon_height"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/common_to_side"
             android:src="@drawable/details_icon_more" />
