--- a/app/src/main/res/layout/activity_shoucang.xml
+++ b/app/src/main/res/layout/activity_shoucang.xml
@@ -14,19 +14,13 @@
             android:background="@android:color/white"
             android:gravity="center_vertical"
             app:borderLine="true"
-            app:titleText="@string/my_shoucang"></com.minyou.manba.ui.ActionTitleView>
+            app:titleText="@string/my_shoucang" />
 
-        <in.srain.cube.views.ptr.PtrClassicFrameLayout
-            android:id="@+id/pcfl_refresh_favorite"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_shoucang"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_shoucang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"></android.support.v7.widget.RecyclerView>
-        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+            android:layout_height="wrap_content"
+            android:background="@android:color/white" />
 
     </LinearLayout>
 </layout>
