--- a/app/src/main/res/layout/fragment_street.xml
+++ b/app/src/main/res/layout/fragment_street.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/home_jiequ" />
+        <com.minyou.manba.ui.ActionTitleView
+            android:id="@+id/street_title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/common_title_height"
+            app:titleText="@string/my_shoucang"
+            app:borderLine="true"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/street_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </layout>
