--- a/app/src/main/res/layout/item_choose_gonghui.xml
+++ b/app/src/main/res/layout/item_choose_gonghui.xml
@@ -20,7 +20,8 @@
             android:id="@+id/iv_gonghui_pic"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/login_icon_qq" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/avater_default" />
 
         <TextView
             android:id="@+id/tv_gonghui_name"
