--- a/app/src/main/res/layout/item_pager_image.xml
+++ b/app/src/main/res/layout/item_pager_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,5 +13,12 @@
             android:adjustViewBounds="true"
             android:scaleType="fitCenter" />
 
-    </FrameLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:scrollbarStyle="insideInset"/>
+
+    </RelativeLayout>
 </layout>
